syntax = "proto3";
package lh_proto;

import "google/protobuf/timestamp.proto";
import "lh_proto.proto";

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.common.proto.observability";

// This section contains observability events produced by the Scheduler.

message RunStartOePb {
    string wf_spec_id = 1;
    string wf_spec_name = 2;
}

message ThreadStartOePb {
    int32 number = 1;
    string thread_spec_name = 2;
}

message TaskScheduledOePb {
    string task_def_id = 1;
    int32 thread_run_number = 2;
    int32 task_run_number = 3;
    int32 task_run_position = 4;
    int32 task_run_attempt_number = 5;
    string wf_run_id = 6;
    string node_name = 7;
}

message TaskStartOePb {
    int32 thread_run_number = 1;
    int32 task_run_number = 2;
    int32 task_run_position = 3;
    string node_name = 4;
}

message TaskCompleteOePb {
    int32 thread_run_number = 1;
    int32 task_run_number = 2;
    int32 task_run_position = 3;

    bool success = 4;
    optional bytes output = 5;
    optional bytes log_output = 6;

    string node_name = 7;
}

message ThreadStatusChangeOePb {
    int32 thread_run_number = 1;
    LHStatusPb status = 2;
}

message WfRunStatusChangeOePb {
    LHStatusPb status = 1;
}

message ObservabilityEventPb {
    google.protobuf.Timestamp time = 1;
    oneof event {
        WfRunStatusChangeOePb wf_run_status = 2;
        RunStartOePb run_start = 3;
        ThreadStartOePb thread_start = 4;
        TaskScheduledOePb task_schedule = 5;
        TaskStartOePb task_start = 6;
        TaskCompleteOePb task_complete = 7;
        ThreadStatusChangeOePb thread_status = 8;
    }
}

message ObservabilityEventsPb {
    string wf_run_id = 1;
    repeated ObservabilityEventPb events = 2;
}
